--- a/ConsoleApp/ConsoleApp.csproj
+++ b/ConsoleApp/ConsoleApp.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.1" />
+    <PackageReference Include="MessagePack" Version="1.7.3.4" />
     <PackageReference Include="Nethereum.HdWallet" Version="2.4.0" />
     <PackageReference Include="Nethereum.Web3" Version="2.4.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.4.0" />
