--- a/Cloudents.Web/appsettings.Development.json
+++ b/Cloudents.Web/appsettings.Development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:on0rodxe8f.database.windows.net;Database=ZBoxNew_Develop;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=tcp:on0rodxe8f.database.windows.net,1433;Initial Catalog=ZboxNew_Develop;Persist Security Info=False;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Ips": "31.154.39.170",
   //"ApiEndpoint": "/",
