--- a/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
+++ b/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
@@ -36,7 +36,7 @@
     <PackageReference Include="CacheManager.Serialization.Json" Version="1.1.2" />
     <PackageReference Include="CacheManager.StackExchange.Redis" Version="1.1.2" />
     <PackageReference Include="Dapper" Version="1.50.4" />
-    <PackageReference Include="FluentNHibernate" Version="2.1.2" />
+    
     <PackageReference Include="Google.Apis.Auth" Version="1.33.0" />
     <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="1.8.1" />
@@ -44,14 +44,17 @@
     <PackageReference Include="Nager.PublicSuffix" Version="1.2.0" />
     <PackageReference Include="Nethereum.HdWallet" Version="2.4.0" />
     <PackageReference Include="Nethereum.Web3" Version="2.4.0" />
-    <PackageReference Include="NHibernate" Version="5.1.2" />
+    
     <PackageReference Include="protobuf-net" Version="2.3.7" />
-    <PackageReference Include="Sendgrid" Version="9.9.0" />
     <PackageReference Include="Spitball.Luis" Version="1.1.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Cloudents.Core\Cloudents.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Database\" />
   </ItemGroup>
 
 </Project>
