--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -65,8 +65,8 @@
     "vuex-persistedstate": "^2.1.2",
     "webfontloader": "1.6.28",
     "webfonts-loader": "4.0.1",
-    "webpack": "^3.8.1",
-    "webpack-cli": "^2.1.3",
+    "webpack": "3.8.1",
+    "webpack-cli": "2.1.3",
     "webpack-hot-middleware": "^2.21.2",
     "webpack-merge": "4.1.1",
     "webpack-stats-plugin": "0.1.5",
