--- a/Cloudents.Functions/Cloudents.Functions.csproj
+++ b/Cloudents.Functions/Cloudents.Functions.csproj
@@ -10,12 +10,14 @@
     <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.SendGrid" Version="2.2.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Twilio" Version="1.2.0" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.ServiceBus" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.13" />
     <!--<PackageReference Include="Spitball.AzureFunctions.Autofac" Version="2.2.0" />-->
     <PackageReference Include="System.Data.SqlClient" Version="4.4.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Cloudents.Core\Cloudents.Core.csproj" />
+    <ProjectReference Include="..\Cloudents.Infrastructure.Framework\Cloudents.Infrastructure.Framework.csproj" />
     <ProjectReference Include="..\Cloudents.Infrastructure\Cloudents.Infrastructure.csproj" />
   </ItemGroup>
   <ItemGroup>
