--- a/Cloudents.Functions/local.settings.json
+++ b/Cloudents.Functions/local.settings.json
@@ -14,6 +14,7 @@
     "SendgridKey": "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",
     "AzureWebJobsServiceBus": "Endpoint=sb://spitball-dev.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=CACOBTEeKVemCY7ScVBHYXBwDkClQcCKUW7QGq8dNfA=",
     "TalkJsSecret": "sk_test_AQGzQ2Rlj0NeiNOEdj1SlosU",
-    "TalkJsAppId": "tXsrQpOx"
+    "TalkJsAppId": "tXsrQpOx",
+    "BlockChainNetwork": "http://spito5-dns-reg1.northeurope.cloudapp.azure.com:8545"
   }
 }
