--- a/Cloudents.Web/appsettings.json
+++ b/Cloudents.Web/appsettings.json
@@ -2,6 +2,19 @@
   "ApplicationInsights": {
     "InstrumentationKey": "7fd51bd7-eb8b-4f0b-8ba8-03f30ac3dad6"
   },
+  "SnapshotCollectorConfiguration": {
+    "IsEnabledInDeveloperMode": false,
+    "ThresholdForSnapshotting": 1,
+    "MaximumSnapshotsRequired": 3,
+    "MaximumCollectionPlanSize": 50,
+    "ReconnectInterval": "00:15:00",
+    "ProblemCounterResetInterval": "1.00:00:00",
+    "SnapshotsPerTenMinutesLimit": 1,
+    "SnapshotsPerDayLimit": 30,
+    "SnapshotInLowPriorityThread": true,
+    "ProvideAnonymousTelemetry": true,
+    "FailedRequestLimit": 3
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:on0rodxe8f.database.windows.net,1433;Initial Catalog=ZboxNew;Persist Security Info=False;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
