--- a/Cloudents.Infrastructure.Data/Cloudents.Infrastructure.Data.csproj
+++ b/Cloudents.Infrastructure.Data/Cloudents.Infrastructure.Data.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.1" />
     <PackageReference Include="FluentNHibernate" Version="2.1.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="NHibernate" Version="5.1.2" />
     
   </ItemGroup>
