--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 
 
-**/wwwroot/css/**
+#**/wwwroot/css/**
 **/wwwroot/lib/**
 **/wwwroot/scripts/**
 **/wwwroot/dist/**
@@ -166,7 +166,6 @@ _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
 
-Zbang.Cloudents.MobileApp2/Properties/PublishProfiles/mobile-cloudents.pubxml
 Cloudents.Web/wwwroot/dist/main.js
 /Cloudents.Web/.idea
 /Cloudents.Web/publicsuffixcache.dat
