Implment emails in ico website.

--- a/Cloudents.Ico/appsettings.json
+++ b/Cloudents.Ico/appsettings.json
@@ -4,5 +4,7 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "ServiceBus": "Endpoint=sb://spitball-prod.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=Y9KgLbLBVD+O1z4iiTaAtS1AnEaowGutNiW+0Ljr8Rw="
+
 }
