--- a/Cloudents.Ico/appsettings.Development.json
+++ b/Cloudents.Ico/appsettings.Development.json
@@ -6,5 +6,7 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "ServiceBus": "Endpoint=sb://spitball-dev.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=CACOBTEeKVemCY7ScVBHYXBwDkClQcCKUW7QGq8dNfA="
+
 }
