--- a/Cloudents.Web/Cloudents.Web.csproj
+++ b/Cloudents.Web/Cloudents.Web.csproj
@@ -24,7 +24,7 @@
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <Compile Remove="Views\Account\**" />
     <Compile Remove="Views\Home\**" />
     <Content Remove="Views\Account\**" />
@@ -33,19 +33,15 @@
     <EmbeddedResource Remove="Views\Home\**" />
     <None Remove="Views\Account\**" />
     <None Remove="Views\Home\**" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Remove="ClientApp\components\food\foodheader.vue" />
-    <None Remove="ClientApp\components\settings\layout.vue.orig" />
-  </ItemGroup>
+  </ItemGroup>-->
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <None Include="Views\Error\Error.cshtml" />
     <None Include="wwwroot\Content\ErrorPages\css\error.css" />
     <None Include="wwwroot\Content\ErrorPages\img\404_image.png" />
     <None Include="wwwroot\Content\main.less" />
     <None Include="wwwroot\robots.txt" />
-  </ItemGroup>
+  </ItemGroup>-->
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.1" />
@@ -72,9 +68,6 @@
     <PackageReference Include="protobuf-net" Version="2.3.7" />
   </ItemGroup>
   <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
-    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.2" />
-    <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.2" />
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
   </ItemGroup>
 
