--- a/Cloudents.Web/Cloudents.Web.csproj
+++ b/Cloudents.Web/Cloudents.Web.csproj
@@ -67,8 +67,9 @@
     <PackageReference Include="WebMarkupMin.AspNetCore2" Version="2.4.4" />
     <PackageReference Include="protobuf-net" Version="2.3.7" />
   </ItemGroup>
+
   <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
+      <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" PrivateAssets="All" />  
   </ItemGroup>
 
   <ItemGroup>
