Added unit test for case 10577

--- a/Cloudents.Core.Test/Cloudents.Core.Test.csproj
+++ b/Cloudents.Core.Test/Cloudents.Core.Test.csproj
@@ -2,8 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>net47</TargetFramework>
-
     <IsPackable>false</IsPackable>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
